@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Handle errors in Perl Scripts better
+       - Stop supporting FindBin by localizing $0, just use Dir::Self if you
+         need that
 
 0.002111  2012-03-29 20:09:45 America/Chicago
        - Improve docs by linking from implementations to their roles
